Versionado de activos implementado
